# JPEG-decoder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: bit_reader.h  constants.h  types.h  utils.h
sources/: bit_reader.cpp  constants.cpp  decoder.cpp  fft.cpp  huffman.cpp  utils.cpp
